fix(styles): button dark mode styles

--- a/src/styles/components/home/header/header.scss
+++ b/src/styles/components/home/header/header.scss
@@ -5,9 +5,6 @@
 }
 
 .button.button.new {
-  color: white;
-  background-color: black;
-  border: 1px solid black;
   border-radius: 20px;
   padding: 20px 20px;
   font-size: 15px;
